# mev-engineering-stack

./: .env.example  .gitignore  CONFIG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: .env.example  arbitrum.json  chains.json  dex.json  tokens.json
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol  DeployArbitrum.s.sol
contracts/src/: FlashArbitrage.sol  MultiDexRouter.sol
contracts/src/interfaces/: IBalancerVault.sol  IERC20.sol  IUniswapV2.sol  IUniswapV3.sol
contracts/src/libraries/: YulUtils.sol
contracts/test/: FlashArbitrage.t.sol  MultiDexRouter.t.sol
core/: Cargo.toml  README.md  build.rs
core/benches/: pipeline.rs
core/src/: config.rs  lib.rs  main.rs  types.rs
core/src/arbitrum/: detector.rs  executor.rs  mod.rs  pools.rs
core/src/bench/: latency.rs  mod.rs
core/src/builder/: mod.rs
core/src/detector/: arbitrage.rs  backrun.rs  liquidation.rs  mod.rs  multi_threaded.rs
core/src/ffi/: hot_path.rs  mod.rs  simulator.rs
core/src/grpc/: mev.rs  mod.rs  server.rs
core/src/mempool/: mod.rs  ultra_ws.rs
core/src/simulator/: evm.rs  mod.rs
core/tests/: ffi_hot_path.rs  integration.rs  proptest.rs
dashboard/: index.html
docker/: Dockerfile  Dockerfile.network  docker-compose.yml  prometheus.yml
fast/: Makefile  README.md
fast/include/: amm_simulator.h  keccak.h  lockfree_queue.h  memory_pool.h  parser.h  rlp.h  simd_utils.h
fast/src/: keccak.c  lockfree_queue.c  memory_pool.c  parser.c  rlp.c  simd_utils.c
fast/test/: test_all.c  test_queue_stress.c
network/: README.md  go.mod  go.sum
proto/: README.md  mev.proto
scripts/: build.ps1  build.sh  deploy.sh  live.ps1  test-arbitrum.ps1
(+16 files in other folders)
